src/tests/krate/publish/snapshots/integration__krate__publish__dependencies__new_with_renamed_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: crates
---
[
  {
    "name": "new-krate",
    "vers": "1.0.0",
    "deps": [
      {
        "name": "my-name",
        "req": ">0",
        "features": [],
        "optional": false,
        "default_features": true,
        "target": null,
        "kind": "normal",
        "package": "package-name"
      }
    ],
    "cksum": "f45e830a39be59e75f1d5c63a3c05856e0d68da52e0e00006b865327edd33431",
    "features": {},
    "yanked": false,
    "pubtime": "[datetime]"
  }
]
