src/tests/krate/publish/snapshots/integration__krate__publish__dependencies__new_with_underscore_renamed_dependency.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: crates
---
[
  {
    "name": "new-krate",
    "vers": "1.0.0",
    "deps": [
      {
        "name": "_my-name",
        "req": ">0",
        "features": [],
        "optional": false,
        "default_features": true,
        "target": null,
        "kind": "normal",
        "package": "package-name"
      }
    ],
    "cksum": "608b7a65a1292ef1de0fc4c453b0ec978c93bc36a11eb0b12cd301ab55c3a760",
    "features": {},
    "yanked": false,
    "pubtime": "[datetime]"
  }
]
